force-app/main/default/objects/dw_syteline_bus_schedule__x/dw_syteline_bus_schedule__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$bus_schedule</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$bus_schedule</externalName>
    <label>dw_syteline$bus_schedule</label>
    <pluralLabel>dw_syteline$bus_schedule</pluralLabel>
</CustomObject>