force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/brt_plus_ind__c.field-meta.xml
<CustomField>
    <fullName>brt_plus_ind__c</fullName>
    <description>brt_plus_ind</description>
    <externalDeveloperName>brt_plus_ind</externalDeveloperName>
    <label>brt_plus_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>