force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/bus_id_nbr__c.field-meta.xml
<CustomField>
    <fullName>bus_id_nbr__c</fullName>
    <description>bus_id_nbr</description>
    <externalDeveloperName>bus_id_nbr</externalDeveloperName>
    <label>bus_id_nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>