force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/bus_length__c.field-meta.xml
<CustomField>
    <fullName>bus_length__c</fullName>
    <description>bus_length</description>
    <externalDeveloperName>bus_length</externalDeveloperName>
    <label>bus_length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>