force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/bus_seq_in_fleet__c.field-meta.xml
<CustomField>
    <fullName>bus_seq_in_fleet__c</fullName>
    <description>bus_seq_in_fleet</description>
    <externalDeveloperName>bus_seq_in_fleet</externalDeveloperName>
    <label>bus_seq_in_fleet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>