force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/bus_seq_in_week__c.field-meta.xml
<CustomField>
    <fullName>bus_seq_in_week__c</fullName>
    <description>bus_seq_in_week</description>
    <externalDeveloperName>bus_seq_in_week</externalDeveloperName>
    <label>bus_seq_in_week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>