force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/bus_start_dt__c.field-meta.xml
<CustomField>
    <fullName>bus_start_dt__c</fullName>
    <description>bus_start_dt</description>
    <externalDeveloperName>bus_start_dt</externalDeveloperName>
    <label>bus_start_dt</label>
    <type>Date</type>
</CustomField>