force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/cng_ind__c.field-meta.xml
<CustomField>
    <fullName>cng_ind__c</fullName>
    <description>cng_ind</description>
    <externalDeveloperName>cng_ind</externalDeveloperName>
    <label>cng_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>