force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/engine_type__c.field-meta.xml
<CustomField>
    <fullName>engine_type__c</fullName>
    <description>engine_type</description>
    <externalDeveloperName>engine_type</externalDeveloperName>
    <label>engine_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>