force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/fleet_desc__c.field-meta.xml
<CustomField>
    <fullName>fleet_desc__c</fullName>
    <description>fleet_desc</description>
    <externalDeveloperName>fleet_desc</externalDeveloperName>
    <label>fleet_desc</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>