force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/hybrid_ind__c.field-meta.xml
<CustomField>
    <fullName>hybrid_ind__c</fullName>
    <description>hybrid_ind</description>
    <externalDeveloperName>hybrid_ind</externalDeveloperName>
    <label>hybrid_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>