force-app/main/default/objects/dw_syteline_bus_schedule__x/fields/total_busses_in_fleet__c.field-meta.xml
<CustomField>
    <fullName>total_busses_in_fleet__c</fullName>
    <description>total_busses_in_fleet</description>
    <externalDeveloperName>total_busses_in_fleet</externalDeveloperName>
    <label>total_busses_in_fleet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>